- Caching now supported when binding to loop packets and generation of archive records is set to hardware (#178).
- Ability to throttle log messages (#179)
  This is experimental and therefore has limited support and could be removed in the future.

Fixes:
- Subfields now inherit the 'ignore' setting (#219)

Build Improvements
- Build migrated from Appveyor to Github.
- More and improved tests.

V3.0.0
*** IMPORTANT ***
- python 3.7 or higher is now required.
- WeeWX 4.6.1 or higher is now required.
- On startup, the MQTTSubscribe configuration is validated.
  By default, configuration errors will be logged. (Note, in prior versions some of these were silently ignored.)
  To 'fail' when there is an error and not start WeeWX, set 'stop_on_validation_errors = true'.
- For more information see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/Upgrade-Guide#upgrading-to-v3-from-v2
  
Enhancements:
- Configuration mode
  Provide functions to export, update, and validate MQTTSubscribe's configuration.
  For more information see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/Configurator-Mode.

- Simulation mode
  Simulates running MQTTSubscribe as a WeeWX driver or service.
  For more information see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/Simulator-mode

- Parser mode
  Read a MQTT 'message' from a file, parse it and extract the data.
  For more information see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/Parser-mode 

- MQTTSubscribe's configuration is now validated on startup.
- Support for MQTT v5.
- Support for paho-mqtt v2.
- Version of paho-mqtt is now logged.

V2.3.0
Fixes:
- Cache (expires_after) is valid when bound to the archive record.

Enhancements:
- On a connection error, display text reason along with numerical return code.
- Support more complex json messages.
  For an example see, https://github.com/bellrichm/WeeWX-MQTTSubscribe/wiki/json-example#complex-json

V2.2.3
Fixes: