@@ -7,7 +7,7 @@ on:
 
 jobs:
   analyze-test:
-    uses: weewx-extensions/development_tools/.github/workflows/full-analyze-test.yml@v3
+    uses: weewx-extensions/development_tools/.github/workflows/full-analyze-test.yml@v4
     with:
       module-name: 'MQTTSubscribe'
       pip-list: 'paho-mqtt'
@@ -19,7 +19,7 @@ jobs:
 
   # Run tests agains paho-mqtt 1.6.1
   analyze-test-paho-mqtt-1-6-1:
-    uses: weewx-extensions/development_tools/.github/workflows/analyze-test.yml@v3
+    uses: weewx-extensions/development_tools/.github/workflows/analyze-test.yml@v4
     with:
       module-name: 'MQTTSubscribe'
       pip-list: 'paho-mqtt==1.6.1'
