@@ -1,6 +1,6 @@
 #
 # This is an example configuration for MQTTSubscribe
-# It was created on 2025-11-27 at 06:22:29 with MQTTSubscribe version 3.1.0-rc07
+# It was created on 2025-12-23 at 08:12:49 with MQTTSubscribe version 3.1.0
 #
 
 # Replace '[MQTTSubscribe]' with '[MQTTSubscribeService]' or '[MQTTSubscribeDriver]'
